# FinanceManager

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  decontainer.json  devcontainer.json
inc/: Server.hpp  Utils.hpp
src/: Main.cpp  Server.cpp  Utils.cpp
